    - Only create Package objects when they are requested, do not keep them in
      a dict. Saves 10MB for 25,000 packages on my machine.
  * apt/package.py:
    - Allow to set the candidate of a package (Closes: #523997)
      + Support assignments to the 'candidate' property of Package objects.
      + Initial patch by Sebastian Heinlein
    - Make comparisons of Version object more robust.
  * Use debhelper 7 instead of CDBS

  [ Stefano Zacchiroli ]
  * debian/python-apt.doc-base: register the documentation with the
    doc-base system (Closes: #525134)

  [ Sebastian Heinlein ]
  * apt/progress.py: Extract the package name from the status message
    (Closes: #532660)

 -- Julian Andres Klode <jak@debian.org>  Thu, 30 Jul 2009 14:08:30 +0200

python-apt (0.7.11.1) unstable; urgency=low

  [ Stephan Peijnik ]
  * apt/progress/__init__.py:
    - Exception handling fixes in InstallProgress class.

  [ Michael Vogt ]
  * python/tag.cc:
    - merge patch from John Wright that adds FindRaw method
      (closes: #538723)

 -- Michael Vogt <mvo@debian.org>  Wed, 29 Jul 2009 19:15:56 +0200

python-apt (0.7.11.0) unstable; urgency=low

  [ Julian Andres Klode ]
  * data/templates/Debian.info.in: Squeeze will be 6.0, not 5.1

  [ Stephan Peijnik ]
  * apt/progress/__init__.py:
    - add update_status_full() that takes file_size/partial_size as
      additional callback arguments
    - add pulse_items() that takes a addtional "items" tuple that
      gives the user full access to the individual items that are
      fetched
  * python/progress.cc:
    - low level code for update_status_full and pulse_items()
    - better threading support

  [ Michael Vogt ]
  * aptsources/distro.py:
    - fix indent error that causes incorrect sources.list additons
      (LP: #372224)
  * python/progress.cc:
    - fix crash in RunSimpleCallback()
  * apt/cache.py:
    - when the cache is run with a alternative rootdir, create
      required dirs/files automatically
