@@ -19,6 +19,8 @@ python-apt (0.7.12.0) unstable; urgency=low
       + Support assignments to the 'candidate' property of Package objects.
       + Initial patch by Sebastian Heinlein
     - Make comparisons of Version object more robust.
+    - Return VersionList objects in Package.versions, which are sequences
+      and also provide features of mappings. (partial API BREAK)
   * Use debhelper 7 instead of CDBS
 
   [ Stefano Zacchiroli ]
